# agentcore-vpc-text-to-sql

./: .gitignore  README.ja.md  README.md
agent/: pyproject.toml
agent/src/: main.py
agent/src/model/: load.py
agent/texttosql/agentcore/: agentcore.json  aws-targets.json
agent/texttosql/agentcore/.cli/: deployed-state.json
agent/texttosql/agentcore/cdk/: package-lock.json
agent/texttosql/app/texttosql/: main.py  pyproject.toml
agent/texttosql/app/texttosql/mcp_client/: client.py
cdk/: .gitignore  cdk.json  package.json  pnpm-lock.yaml  tsconfig.json
cdk/lib/: text-to-sql-stack.ts
cdk/scripts/: seed-data.sh
cdk/sql/: 01_schema.sql  02_seed_data.sql
docs/: agentcore.md  architecture-v2.drawio  architecture.drawio  aurora.md  data.md  operation-check.md  vpc-endpoint.md
scripts/: cleanup.sh
